--- a/PitchTool/style/style.css
+++ b/PitchTool/style/style.css
@@ -3,6 +3,15 @@ body {
   user-select:none;
 }
 
+.tutorialOverlay {
+  z-index:999;
+  position:fixed;
+  left:0;
+  top:0;
+  width:100vw;
+  height:100vh;
+}
+
 .playerListTable {
   width:100%;
   padding-top:1em;
@@ -72,4 +81,13 @@ body {
   padding-top:0.25em;
   padding-bottom:0.25em;
 
+}
+
+.note {
+  margin:auto;
+  padding-left:2em;
+  padding-right:2em;
+  padding-top:0.5em;
+  padding-bottom:0.5em;
+  border:2px dashed red;
 }
