Updated style on video

--- a/blenderCharts/style.css
+++ b/blenderCharts/style.css
@@ -1,16 +1,25 @@
 body {
-  background-color:#efefef;
+  background-color:#ffffff;
   font-family:Merriweather;
   font-size:22px;
+  margin:0;
+  padding:0;
+  user-select:none;
 }
 
 h1 {
   font-family:Oswald;
   font-size:3em;
-  font-weight:300;
+  font-weight:500;
+  background-color:black;
+  display:inline-block;
+  padding-left:1em;
+  padding-right:1em;
+  color:white;
 }
 
 #container {
-  max-width:800px;
+  padding-left:5vw;
+  padding-right:5vw;
   margin:auto;
 }
