--- a/app/style.css
+++ b/app/style.css
@@ -281,3 +281,24 @@ p {
   padding-top:0.0625em;
   z-index:1;
 }
+
+.video-overlay-image {
+  background-size:cover;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  background-color:black;
+  position:absolute;
+}
+
+.video-overlay {
+  background-color:rgba(0,0,0,0.125);
+  position:absolute;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  cursor:pointer;
+  pointer-events:none;
+}
