--- a/app/style.css
+++ b/app/style.css
@@ -26,6 +26,7 @@ body {
   margin:0;
   padding:0;
   font-family:Oswald;
+  user-select:none;
 }
 
 .callDown {
@@ -293,7 +294,6 @@ p {
 }
 
 .video-overlay {
-  background-color:rgba(0,0,0,0.125);
   position:absolute;
   width:100%;
   height:100%;
