--- a/app/style.css
+++ b/app/style.css
@@ -65,11 +65,15 @@ body {
 
 .content-video-container {
   margin:auto;
-  width:100vw;
+  width:95vw;
   max-width:1000px;
   position:relative;
   display:block;
   overflow:hidden;
+  margin-top:1em;
+  margin-bottom:1em;
+  border:5px solid rgb(60,144,60);
+  box-shadow:5px 5px 8px rgba(0,0,0,0.25);
 }
 
 .content-video-container::before {
