--- a/app/src/css/back-button.css
+++ b/app/src/css/back-button.css
@@ -1,6 +1,6 @@
 #back-button {
   font-weight:600;
-  font-size:2em;
+  font-size:3em;
   padding-left:0.5em;
   padding-right:0.5em;
   cursor:pointer;
@@ -10,8 +10,12 @@
   left:0;
   top:0;
   z-index:-2;
-  margin-top:0.5em;
-  margin-bottom:0.5em;
+  margin-top:0;
+  margin-bottom:0;
+  width:100vw;
+  height:100%;
+  left:-100vw;
+  font-weight:300;
 }
 
 #back-button:hover {
