--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,12 @@
+a {
+  font-weight:bold;
+  color:black;
+  color:rgb(60,144,60);
+}
+
 #back-button {
   font-weight:600;
-  font-size:2em;
+  font-size:3em;
   padding-left:0.5em;
   padding-right:0.5em;
   cursor:pointer;
@@ -10,8 +16,12 @@
   left:0;
   top:0;
   z-index:-2;
-  margin-top:0.5em;
-  margin-bottom:0.5em;
+  margin-top:0;
+  margin-bottom:0;
+  width:100vw;
+  height:100%;
+  left:-100vw;
+  font-weight:300;
 }
 
 #back-button:hover {
@@ -70,9 +80,9 @@ body {
   position:relative;
   display:block;
   overflow:hidden;
-  margin-top:1em;
-  margin-bottom:1em;
-  border:5px solid rgb(60,144,60);
+  margin-top:2em;
+  margin-bottom:2em;
+  border:3px solid rgb(60,144,60);
   box-shadow:5px 5px 8px rgba(0,0,0,0.25);
 }
 
@@ -112,6 +122,15 @@ body {
   font-size:2em;
   font-weight:300;
 }
+
+.explanation-div {
+   width:90%;
+   margin:auto;
+   margin-bottom:2em;
+   margin-top:5em;
+   padding-top:5em;
+   border-top:1px solid black
+ }
 
 h1 {
   font-weight:500;
@@ -172,6 +191,27 @@ h2 {
   font-size:1.5em;
 }
 
+.more-sketches-button {
+  width:95%;
+  border:5px dashed rgb(60,144,60);
+  color:white;
+  background-color:rgba(60,144,60,1);
+  font-size:3em;
+  font-weight:500;
+  margin:auto;
+  margin-top:2em;
+  margin-bottom:3em;
+  text-align:center;
+  padding-top:0.5em;
+  padding-bottom:0.5em;
+  cursor:pointer;
+}
+
+.more-sketches-button:hover {
+  background-color:white;
+  color:rgb(60,144,60);
+}
+
 #navbar {
   width:100vw;
   box-shadow:0px 5px 10px rgba(0,0,0,0.25);
@@ -189,6 +229,7 @@ p {
   font-size:2em;
   margin-top:0.25em;
   margin-bottom:0.25em;
+  padding-top:1em;
 }
 
 .portfolio-item-line {
