--- a/app/src/css/portfolio-item.css
+++ b/app/src/css/portfolio-item.css
@@ -1,6 +1,17 @@
-.portfolio-item {
-  max-height:25vw;
-  overflow:hidden;
-  position:relative;
-  cursor:pointer;
+@media (orientation: portrait) {
+  .portfolio-item {
+    max-height:25vw;
+    overflow:hidden;
+    position:relative;
+    cursor:pointer;
+  }
+}
+
+@media (orientation: landscape) {
+  .portfolio-item {
+    max-height:12.5vw;
+    overflow:hidden;
+    position:relative;
+    cursor:pointer;
+  }
 }
