--- a/app/style.css
+++ b/app/style.css
@@ -144,6 +144,7 @@ h1 {
   font-size:4em;
   margin-bottom:0;
   margin-top:0;
+  line-height:85%;
 }
 
 h2 {
@@ -365,4 +366,10 @@ p {
   left:0;
   cursor:pointer;
   pointer-events:none;
+}
+
+.videoCaption {
+  width:90%;
+  margin:auto;
+  font-size:1.2em;
 }
