--- a/app/src/css/content-video-container.css
+++ b/app/src/css/content-video-container.css
@@ -1,7 +1,8 @@
 .content-video-container {
   margin:auto;
-  width:95vw;
-  max-width:1000px;
+  width:88.8888vh;
+  max-height:50vh;
+  max-width:100vw;
   position:relative;
   display:block;
   overflow:hidden;
