--- a/app/style.css
+++ b/app/style.css
@@ -82,8 +82,9 @@ body {
 
 .content-video-container {
   margin:auto;
-  width:95vw;
-  max-width:1000px;
+  width:88.8888vh;
+  max-height:50vh;
+  max-width:100vw;
   position:relative;
   display:block;
   overflow:hidden;
